# Triangles-3D

./: CMakeLists.txt  Makefile  README.md  main.cpp  triangles
Geometry/: line.cpp  line.hpp  plane.cpp  plane.hpp  point.cpp  point.hpp  triangle.cpp  triangle.hpp  vector.cpp  vector.hpp
Include/: double_numbers.hpp  line.hpp  point.hpp  triangle.hpp  vector.hpp
Intersection/: double_intersection.cpp  double_intersection.hpp  intersection.cpp  intersection.hpp
Line/: line.hpp
MathLibs/: double_numbers.hpp
Octree/: octree.cpp  octree.hpp
Point/: point.cpp  point.hpp
Tests/: 1test.txt  2test.txt  3test.txt  CMakeLists.txt  tests.cpp  tests.hpp
Vector/: vector.cpp  vector.hpp
inc/: double_intersection.hpp  intersection.hpp  line.hpp  octree.hpp  plane.hpp  point.hpp  triangle.hpp  vector.hpp
src/: CMakeLists.txt  double_intersection.cpp  intersection.cpp  line.cpp  main.cpp  octree.cpp  plane.cpp  point.cpp  triangle.cpp  vector.cpp
